@@ -54,6 +54,7 @@ Export-Package: org.eclipse.sirius.diagram;version="4.0.0",
  org.eclipse.sirius.diagram.business.internal.metamodel.spec;version="3.2.0";x-internal:=true,
  org.eclipse.sirius.diagram.business.internal.migration;version="3.2.0";x-internal:=true,
  org.eclipse.sirius.diagram.business.internal.query;version="3.1.0";x-internal:=true,
+ org.eclipse.sirius.diagram.business.internal.refresh;version="4.0.0";x-internal:=true,
  org.eclipse.sirius.diagram.business.internal.repair.commands;version="2.0.4";x-internal:=true,
  org.eclipse.sirius.diagram.business.internal.repair.resource;version="2.0.4";x-internal:=true,
  org.eclipse.sirius.diagram.business.internal.repair.resource.session.diagram.data;version="2.0.4";x-internal:=true,
