@@ -253,6 +253,14 @@
 				<code>org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry</code> and 
 				<code>org.eclipse.sirius.business.api.action.IRefreshActionListener</code>.
 			</li>
+			<li><span class="label label-info">Moved</span> The classes 
+				<code>DSemanticDiagramScopePredicate</code>, 
+				<code>SiriusDiagramSessionEventBroker</code>, 
+				<code>SiriusGMFSynchronizerDispatcher</code> and 
+				<code>SynchronizeGMFModelCommand</code> have been moved from the package 
+				<code>org.eclipse.sirius.diagram.ui.internal.refresh</code> from the bundle Sirius Diagram UI bundle to the package 
+				<code>org.eclipse.sirius.diagram.business.internal.refresh</code> in the bundle Sirius Diagram.
+			</li>
 			<li><span class="label label-danger">Removed</span> The class 
 				<code>org.eclipse.sirius.ui.business.api.editor.SpecificSessionManager</code> has been removed. 
 			</li>
